[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://lanterna-acesa.png" type="Texture" id=2]
[ext_resource path="res://lanterna-apagada.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 115, 256 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="FlashlightToggleOff" type="TextureButton" parent="."]
anchor_left = 0.912
anchor_top = 0.757
anchor_right = 0.912
anchor_bottom = 0.757
margin_left = -6.10352e-05
margin_right = 128.0
margin_bottom = 256.0
rect_scale = Vector2( 0.45, 0.45 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )

[node name="FlashlightToggleOn" type="TextureButton" parent="."]
visible = false
anchor_left = 0.912
anchor_top = 0.757
anchor_right = 0.912
anchor_bottom = 0.757
margin_right = 128.0
margin_bottom = 256.0
rect_scale = Vector2( 0.45, 0.45 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )

[node name="LeftTouch" type="TouchScreenButton" parent="."]
shape = SubResource( 1 )
action = "move_left"

[node name="RightTouch" type="TouchScreenButton" parent="."]
position = Vector2( 794, 0 )
shape = SubResource( 1 )
action = "move_right"

[connection signal="pressed" from="FlashlightToggleOff" to="." method="_on_FlashlightToggleOff_pressed"]
[connection signal="pressed" from="FlashlightToggleOff" to="." method="_on_FlashlightToggle_pressed"]
[connection signal="pressed" from="FlashlightToggleOn" to="." method="_on_FlashlightToggleOn_pressed"]
[connection signal="pressed" from="FlashlightToggleOn" to="." method="_on_FlashlightToggle_pressed"]
[connection signal="pressed" from="LeftTouch" to="." method="_on_LeftTouch_pressed"]
[connection signal="released" from="LeftTouch" to="." method="_on_LeftTouch_released"]
